src/objects/Gallery__c.object
<CustomObject>
    <fields>
        <fullName>Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Project_Unit_Type__c</referenceTo>
        <relationshipLabel>Gallaries</relationshipLabel>
        <relationshipName>Gallaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Gallaries</relationshipLabel>
        <relationshipName>Gallaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Gallaries</relationshipLabel>
        <relationshipName>Gallaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Elevations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Pictures</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gallery</label>
    <nameField>
        <label>Gallery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gallaries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>